# Rusty

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Shuttle.toml  songbird-implementation-plan.md
.cargo/: cargo.toml
.github/workflows/: deploy.yml
src/: brave.rs  database.rs  events.rs  lib.rs  main.rs  openai.rs
src/commands/: commands.rs  mod.rs
src/commands/admins/: mod.rs  slow_mode.rs
src/commands/ai/: chat.rs  get_model.rs  list_models.rs  mod.rs  search.rs  set_model.rs
src/commands/ai/utils/: mod.rs  ollama_client.rs
src/commands/coingecko/: coin.rs  mod.rs
src/commands/general/: code.rs  coin.rs  file.rs  image.rs  imgen.rs  mod.rs  openai.rs  ping.rs  question.rs  timer.rs
src/commands/general/ai/: ai.rs  mod.rs
src/commands/general/coingecko/: coin.rs  mod.rs
src/commands/general/openai/: ai.rs  chat.rs  imgen.rs  list_models.rs  mod.rs  question.rs
src/commands/music/: autoplay.rs  leave.rs  mod.rs  pause.rs  play.rs  queue.rs  remove.rs  skip.rs  stop.rs
src/commands/music/audio_sources/: mod.rs  spotify.rs  track_metadata.rs  youtube.rs
src/commands/music/audio_sources/related_songs/: mod.rs  serp_api.rs  ytdl.rs
src/commands/music/utils/: audio_sources.rs  autoplay_manager.rs  button_controls.rs  button_handlers.rs  component_handlers.rs  embedded_messages.rs  event_handlers.rs  mod.rs  music_manager.rs  queue_manager.rs  song_fetchers.rs  spotify_api.rs  track_cache.rs
src/utils/: brave.rs  database.rs  mod.rs  ollama_client.rs
tests/: lib.rs  mod.rs
tests/common/: mod.rs
tests/common/fixtures/: mod.rs
tests/common/mocks/: mod.rs
