[package]
name = "rusty"
version = "1.1.34"
authors = ["Charles <Charles.T.Cheney@gmail.com>"]
edition = "2021"
publish = false

# Feature flags
[features]
default = ["brave_search", "music"]
brave_search = []
music = ["dep:songbird", "dep:symphonia"]

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.41"
futures = "0.3.30"
chrono = "0.4.40"
serde_json = "1.0.140"
thiserror = "1.0.61"
base64 = "0.22.1"
poise = "0.6.1"
thousands = "0.2.0"
serde = { version = "1.0.203", features = ["derive"] }
once_cell = "1.21.1"
ollama-rs = "0.2.6"
dashmap = "6.1.0"
url = "2.5.0"
lazy_static = "1.4.0"
regex = "1.10.3"
async-trait = "0.1.88"
serpapi-search-rust = "0.1.0"

[dependencies.tokio]
version = "1.37.0"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.serenity]
version = "0.12.1"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "voice"]

[dependencies.songbird]
version = "0.5"
features = ["builtin-queue", "gateway", "driver"]
optional = true

# Additional codecs for songbird via symphonia
[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3", "isomp4", "alac"]
optional = true

[dependencies.reqwest]
version = "0.12.4"
features = ["json"]

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dev-dependencies]
mockall = "0.12.1"
mock-it = "0.4.0"
tokio-test = "0.4.3"
test-case = "3.3.1"
assert_matches = "1.5.0"
pretty_assertions = "1.4.0"
wiremock = "0.5.22"
fake = { version = "2.9.2", features = ["derive"] }
rstest = "0.18.2"
async-trait = "0.1.88"