[package]
name = "rusty"
version = "1.2.0"
authors = ["Charles <Charles.T.Cheney@gmail.com>"]
edition = "2024"
publish = false

# Feature flags
[features]
default = ["brave_search", "music"]
brave_search = []
music = ["dep:songbird", "dep:symphonia"]

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.41"
futures = "0.3.31"
chrono = "0.4.41"
serde_json = "1.0.142"
thiserror = "2.0.12"
base64 = "0.22.1"
poise = "0.6.1"
thousands = "0.2.0"
ollama-rs = "0.3.2"
dashmap = "6.1.0"
url = "2.5.4"
regex = "1.10.3"
serpapi-search-rust = "0.1.0"
humantime-serde = "1.1.1"
rand = "0.9"

[dependencies.tokio]
version = "1.46.1"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serenity]
version = "0.12.4"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "voice"]

[dependencies.songbird]
version = "0.5"
features = ["builtin-queue", "gateway", "driver"]
optional = true

# Additional codecs for songbird via symphonia
[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3", "isomp4", "alac"]
optional = true

[dependencies.reqwest]
version = "0.12.23"
features = ["json"]

[dependencies.rusqlite]
version = "0.37.0"
features = ["bundled"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dev-dependencies]
mockall = "0.13.1"
mock-it = "0.9.0"
tokio-test = "0.4.3"
test-case = "3.3.1"
assert_matches = "1.5.0"
pretty_assertions = "1.4.0"
wiremock = "0.6.4"
rstest = "0.25.0"
async-trait = "0.1.88"

[dev-dependencies.fake]
version = "4.3.0"
features = ["derive"]
